# rust_db

./: Cargo.toml  README.md
src/: client.rs  commands.rs  config.rs  db.rs  db_types.rs  listener.rs  main.rs  protocol.rs  web.rs
web/: client.js  index.html
